# Portfolio-Management-Optimization

./: .gitignore  README.md  init_setup.sh  pyproject.toml  requirements.txt
.github/workflows/: unittests.yml
config/: backtesting.yaml  benchmarks.yaml  data.yaml  features.yaml  forecasting.yaml  optimization.yaml  paths.yaml
notebooks/: backtesting.ipynb  eda.ipynb  forcasting_model.ipynb  future_forecasting.ipynb  portifolio_optimization.ipynb
scripts/: run_backtest.sh  run_forecaster.py  run_pipeline.sh
src/pmo_forcasting/core/: settings.py
src/pmo_forcasting/data/: handler.py  market_data_downloader.py  persistance.py  pipeline.py  source.py
src/pmo_forcasting/forecasting/: compare.py  data_preparation.py  evaluate.py  pipeline.py  registry.py
src/pmo_forcasting/forecasting/arima/: forecast.py  model.py  train.py
src/pmo_forcasting/forecasting/lstm/: dataset.py  forecast.py  model.py  recursive.py  train.py
src/pmo_forcasting/preprocessing/: outlier_detector.py
src/pmo_forecasting/core/: settings.py
src/pmo_forecasting/data/: formater.py  handler.py  persistence.py  pipeline.py  source.py  transformer.py
src/pmo_forecasting/forecasting/: compare.py  data_preparation.py  evaluate.py  metrics.py  pipeline.py
src/pmo_forecasting/forecasting/lstm/: model.py
src/pmo_forecasting/preprocessing/: __init__.py  pipeline.py
src/pmo_forecasting/stats/: adf_test.py  financial_metrics.py
tests/: test_download.py
